--- a/requirements.txt
+++ b/requirements.txt
@@ -112,6 +112,7 @@ mkl-fft==1.0.0
 mkl-random==1.0.1
 more-itertools==4.1.0
 mpmath==1.0.0
+msgpack==0.5.6
 msgpack-python==0.5.6
 multipledispatch==0.5.0
 navigator-updater==0.2.1
