--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 absl-py==0.2.2
 alabaster==0.7.10
 alembic==0.9.10
-anaconda-client==1.2.2
-anaconda-navigator==1.8.7
+git+https://github.com/Anaconda-Server/anaconda-client
 anaconda-project==0.8.2
 appdirs==1.4.3
 arcgis==1.4.1
