--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ clyent==1.2.1
 colorama==0.3.9
 comtypes==1.1.4
 conda==4.3.16
-conda-build==3.10.5
+git+https://github.com/conda/conda-build
 conda-verify==2.0.0
 contextlib2==0.5.5
 cryptography==2.2.2
