--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ colorama==0.3.9
 comtypes==1.1.4
 conda==4.3.16
 git+https://github.com/conda/conda-build
-conda-verify==2.0.0
+git+https://github.com/conda/conda-verify@2.0.0
 contextlib2==0.5.5
 cryptography==2.2.2
 cycler==0.10.0
