--- a/requirements.txt
+++ b/requirements.txt
@@ -105,7 +105,7 @@ Markdown==2.6.11
 MarkupSafe==1.0
 matplotlib==2.2.2
 mccabe==0.6.1
-menuinst==1.4.14
+git+https://github.com/ContinuumIO/menuinst
 mistune==0.8.3
 mkl-fft==1.0.0
 mkl-random==1.0.1
