--- a/requirements.txt
+++ b/requirements.txt
@@ -136,7 +136,7 @@ pyzmq==17.0.0
 QtAwesome==0.4.4
 qtconsole==4.3.1
 QtPy==1.4.1
-requests==2.18.4
+requests>=2.19.0
 requests-oauthlib==1.0.0
 requests-toolbelt==0.8.0
 rsa==3.4.2
